Design enahnced by adding service call for business rules implimenation, Code refactored, Process flow diagrams added.

--- a/Reddit_MVC_App/Views/Home/GetSubredditData.cshtml
+++ b/Reddit_MVC_App/Views/Home/GetSubredditData.cshtml
@@ -8,7 +8,7 @@
     <tr>
             <th scope="col">Title </th>
             <th scope="col">Author</th>
-            <th scope="col">UPS</th>
+            <th scope="col">UpVotes</th>
     </tr>
     </thead>
     @foreach (var SubredditListing in Model.Data.Childern)
