--- a/Reddit_MVC_App/Views/Home/Index.cshtml
+++ b/Reddit_MVC_App/Views/Home/Index.cshtml
@@ -27,7 +27,7 @@
  
         <p>
   <button class="btn btn-primary" type="button" id="btnRateLmt" data-bs-toggle="collapse" data-bs-target="#collapseWidthExample" aria-expanded="false" aria-controls="collapseWidthExample">
-    Clieck here to see the Rate Limit Details...
+    Clieck here to see the Rate (Reddit API usage)Limit Details...
   </button>
 </p>
 <div style="min-height: 120px;">
