--- a/Reddit_MVC_App/Views/Home/GetUserDetail.cshtml
+++ b/Reddit_MVC_App/Views/Home/GetUserDetail.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<AboutUserDet>
+﻿@model IEnumerable<UserPostDetail>
  
 <div class="form-group">
     <label for="textbox1" class="fw-bold p-2 bg-secondary text-white">	Users with most posts </label>
@@ -8,7 +8,7 @@
     <tr>
             <th scope="col"> Display Name</th>
             <th scope="col">Title</th>
-            <th scope="col">Posts(Total Karma)</th>
+            <th scope="col">Total Posts(Karma)</th>
         </tr>
 </thead>
     @foreach (var AboutUserDet in Model)
